--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -3,116 +3,122 @@
 <main>
 		<div class="substrate">
 			<h2>Routes</h2>
-			<table>
-				<tr>
-					<th>Route number</th>
-					<th>From</th>
-					<th>To</th>
-				</tr>
-				<tr onclick="showCard()">
-					<td>90</td>
-					<td>Maly pr. VO</td>
-					<td>Nevsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>90</td>
-					<td>Maly pr. VO</td>
-					<td>Nevsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
-				</tr>
-			</table>
+			<div class="table-wrapper">
+				<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
+				<table>
+					<tr>
+						<th>Route number</th>
+						<th>From</th>
+						<th>To</th>
+					</tr>
+					<tr onclick="showCard()">
+						<td>90</td>
+						<td>Maly pr. VO</td>
+						<td>Nevsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>90</td>
+						<td>Maly pr. VO</td>
+						<td>Nevsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>190</td>
+						<td>Bolshoy pr. VO</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>190</td>
+						<td>Bolshoy pr. VO</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>190</td>
+						<td>Bolshoy pr. VO</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>190</td>
+						<td>Bolshoy pr. VO</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>190</td>
+						<td>Bolshoy pr. VO</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>300</td>
+						<td>Devyatkino</td>
+						<td>Kupchino</td>
+					</tr>
+				</table>
+			</div>
 			<div class="card">
 				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
 				<h3>Route name</h3>
-				<table>
-					<tr>
-						<th>Stop</th>
-						<th>Time</th>
-					</tr>
-					<tr>
-						<td>Maly pr. VO</td>
-						<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-					</tr>
-					<tr>
-						<td>Nevsky pr.</td>
-						<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-					</tr>
-					<tr>
-						<td>Bolshoy pr. VO</td>
-						<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-					</tr>
-					<tr>
-						<td>Sampsonievsky pr.</td>
-						<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-					</tr>
-					<tr>
-						<td>Nevsky pr.</td>
-						<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-					</tr>
-					<tr>
-						<td>Bolshoy pr. VO</td>
-						<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-					</tr>
-				</table>
+				<div class="table-wrapper">
+					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
+					<table>
+						<tr>
+							<th>Stop</th>
+							<th>Time</th>
+						</tr>
+						<tr>
+							<td>Maly pr. VO</td>
+							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
+						</tr>
+						<tr>
+							<td>Nevsky pr.</td>
+							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
+						</tr>
+						<tr>
+							<td>Bolshoy pr. VO</td>
+							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
+						</tr>
+						<tr>
+							<td>Sampsonievsky pr.</td>
+							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
+						</tr>
+						<tr>
+							<td>Nevsky pr.</td>
+							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
+						</tr>
+						<tr>
+							<td>Bolshoy pr. VO</td>
+							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
+						</tr>
+					</table>
+				</div>
 					<div class="google-map-on-card">
 						<!-- Google Maps -->
 						<div id="map"></div>
