--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -23,116 +23,122 @@
 				</div>
 				{{> html/route_filtering_menu }}
 			</div>
-			<table>
-				<tr onclick="showCard()">
-					<th>Number</th>
-					<th>Route</th>
-					<th>Name</th>
-				</tr>
-				<tr onclick="showCard()">
-					<td>45</td>
-					<td>01</td>
-					<td>Nevsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>46</td>
-					<td>02</td>
-					<td>Maly pr. VO</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>46</td>
-					<td>03</td>
-					<td>Bolshoy pr. VO</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>48</td>
-					<td>04</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>49</td>
-					<td>05</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>50</td>
-					<td>06</td>
-					<td>Devyatkino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>51</td>
-					<td>07</td>
-					<td>Nahimova str.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>45</td>
-					<td>01</td>
-					<td>Nevsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>46</td>
-					<td>02</td>
-					<td>Maly pr. VO</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>46</td>
-					<td>03</td>
-					<td>Bolshoy pr. VO</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>48</td>
-					<td>04</td>
-					<td>Sampsonievsky pr.</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>49</td>
-					<td>05</td>
-					<td>Kupchino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>50</td>
-					<td>06</td>
-					<td>Devyatkino</td>
-				</tr>
-				<tr onclick="showCard()">
-					<td>51</td>
-					<td>07</td>
-					<td>Nahimova str.</td>
-				</tr>
-			</table>
+			<div class="table-wrapper">
+			<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
+				<table>
+					<tr onclick="showCard()">
+						<th>Number</th>
+						<th>Route</th>
+						<th>Name</th>
+					</tr>
+					<tr onclick="showCard()">
+						<td>45</td>
+						<td>01</td>
+						<td>Nevsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>46</td>
+						<td>02</td>
+						<td>Maly pr. VO</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>46</td>
+						<td>03</td>
+						<td>Bolshoy pr. VO</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>48</td>
+						<td>04</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>49</td>
+						<td>05</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>50</td>
+						<td>06</td>
+						<td>Devyatkino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>51</td>
+						<td>07</td>
+						<td>Nahimova str.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>45</td>
+						<td>01</td>
+						<td>Nevsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>46</td>
+						<td>02</td>
+						<td>Maly pr. VO</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>46</td>
+						<td>03</td>
+						<td>Bolshoy pr. VO</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>48</td>
+						<td>04</td>
+						<td>Sampsonievsky pr.</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>49</td>
+						<td>05</td>
+						<td>Kupchino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>50</td>
+						<td>06</td>
+						<td>Devyatkino</td>
+					</tr>
+					<tr onclick="showCard()">
+						<td>51</td>
+						<td>07</td>
+						<td>Nahimova str.</td>
+					</tr>
+				</table>
+			</div>
 			<div class="card">
 				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
 				<h3>Stop name</h3>
-				<table>
-					<tr>
-						<th>Route</th>
-						<th>Time</th>
-					</tr>
-					<tr>
-						<td>01</td>
-						<td>12:00</td>
-					</tr>
-					<tr>
-						<td>02</td>
-						<td>13:00</td>
-					</tr>
-					<tr>
-						<td>03</td>
-						<td>14:00</td>
-					</tr>
-					<tr>
-						<td>04</td>
-						<td>15:00</td>
-					</tr>
-					<tr>
-						<td>05</td>
-						<td>16:00</td>
-					</tr>
-					<tr>
-						<td>06</td>
-						<td>17:00</td>
-					</tr>
-				</table>
+				<div class="table-wrapper">
+					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
+					<table>
+						<tr>
+							<th>Route</th>
+							<th>Time</th>
+						</tr>
+						<tr>
+							<td>01</td>
+							<td>12:00</td>
+						</tr>
+						<tr>
+							<td>02</td>
+							<td>13:00</td>
+						</tr>
+						<tr>
+							<td>03</td>
+							<td>14:00</td>
+						</tr>
+						<tr>
+							<td>04</td>
+							<td>15:00</td>
+						</tr>
+						<tr>
+							<td>05</td>
+							<td>16:00</td>
+						</tr>
+						<tr>
+							<td>06</td>
+							<td>17:00</td>
+						</tr>
+					</table>
+				</div>
 					<div class="google-map-on-card">
 						<!-- Google Maps -->
 						<div id="map"></div>
