--- a/dev-server/app/templates/partials/head.hbs
+++ b/dev-server/app/templates/partials/head.hbs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static-assets/css/styles.css">
 	<script type="text/javascript" src="/static-assets/js/scripts.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-	<link rel="shortcut icon" type="image/png" href="/static-assets/images/favicon.png" id="favicon" />
+	<link rel="shortcut icon" type="image/png" href="/static-assets/images/bus.svg" id="favicon" />
     <script>
         (function () {
             const port = 'ws://localhost:{{ port }}';
