--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -131,6 +131,7 @@
   display: none
   &:hover
     color: $main-color
+    cursor: pointer
 
 @media (max-width: 470px)
   .favorites-menu, .login-menu
