--- a/dev-server/app/static-assets/sass/_find-field.sass
+++ b/dev-server/app/static-assets/sass/_find-field.sass
@@ -6,7 +6,7 @@
   height: 48px
   padding: 3px
   border: 1px solid #ccc
-  &:hover > .find-txt 
+  &:hover > .find-txt
     width: 200px
     padding: 0 10px
   &:hover > .find-btn 
@@ -38,7 +38,10 @@
   line-height: 40px
   width: 0px
   font-weight: bold
-
+  &:focus
+    width: 200px
+    padding: 0 10px
+    
 .mobile-find-field-closing
   position: absolute
   right: 16px
