improvements in js code

--- a/dev-server/app/templates/partials/html/header_menus.hbs
+++ b/dev-server/app/templates/partials/html/header_menus.hbs
@@ -1,5 +1,5 @@
 <div class="favorites-menu">
-	<div class="closing-button" onclick="showFavorites()"><i class="material-icons close-pic">close</i></div>
+	<div class="closing-button" onclick="closeFavorites()"><i class="material-icons close-pic">close</i></div>
 	<div class="edit-button" onclick="editFavorites()"><i class="material-icons">more_vert</i></div>
 	<h3>Favorites</h3>
 	<ul>
@@ -11,7 +11,7 @@
 	</ul>
 </div>
 <div class="login-menu">
-	<div class="closing-button" onclick="showLoginMenu()"><i class="material-icons close-pic">close</i></div>
+	<div class="closing-button" onclick="closeLoginMenu()"><i class="material-icons close-pic">close</i></div>
 	<h3>Sign in</h3>
 	<input type="text" placeholder="Login">
 	<input type="password" placeholder="Password">
