ability to sign in

--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -6,6 +6,7 @@
   height: 100%
 
 .found-route-menu
+  display: none
   position: absolute
   top: 0
   right: 0
@@ -209,9 +210,6 @@
     left: 0
     width: 95%
 
-.fa-map-marker-alt
-  margin-right: 5px
-
 .login-menu
   opacity: 0
   position: absolute
@@ -243,6 +241,38 @@
     font-size: 1.2em
     &:focus
       background: #fff
+      border: none
+  .login-failed
+    background: #fbd2ce
+    border: 1px solid #ff9085
+    animation-name: shake
+    animation-duration: 0.4s
+    animation-timing-function: ease-in-out
+
+@keyframes shake
+  0%
+    transform: translate(1px, 1px) rotate(0deg)
+  10%
+    transform: translate(-1px, -2px) rotate(-1deg)
+  20%
+    transform: translate(-3px, 0px) rotate(1deg)
+  30%
+    transform: translate(3px, 2px) rotate(0deg)
+  40%
+    transform: translate(1px, -1px) rotate(1deg)
+  50%
+    transform: translate(-1px, 2px) rotate(-1deg)
+  60%
+    transform: translate(-3px, 1px) rotate(0deg)
+  70%
+    transform: translate(3px, 1px) rotate(-1deg)
+  80%
+    transform: translate(-1px, -1px) rotate(1deg)
+  90%
+    transform: translate(1px, 2px) rotate(0deg)
+  100%
+    transform: translate(1px, -2px) rotate(-1deg)
+
 
 #login-button
   font-size: 1.3em
