--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -10,81 +10,108 @@
 						<th>Route number</th>
 						<th>From</th>
 						<th>To</th>
+						<th><i class="material-icons">star</i></th>
 					</tr>
 					<tr onclick="showCard()">
 						<td>90</td>
 						<td>Maly pr. VO</td>
 						<td>Nevsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>90</td>
 						<td>Maly pr. VO</td>
 						<td>Nevsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
+						<td><i class="material-icons">star_border</i></td>
 					</tr>
 				</table>
 			</div>
+				<div class="pagination-wrapper">
+					<div class="pagination">
+						<a href="#">&laquo;</a>
+						<a href="#" class="pagination--active">1</a>
+						<a href="#">2</a>
+						<a href="#">3</a>
+						<a href="#">4</a>
+						<a href="#">5</a>
+						<a href="#">6</a>
+						<a href="#">&raquo;</a>
+					</div>
+				</div>
 			<div class="card">
-				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
+				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Route name</h3>
 				<div class="table-wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
