--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic);
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
-@import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono:700");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @font-face {
   font-family: "Mission";
@@ -243,6 +240,7 @@ nav {
 }
 
 .found-route-menu {
+  display: none;
   position: absolute;
   top: 0;
   right: 0;
@@ -486,10 +484,6 @@ nav {
     width: 95%;
   }
 }
-.fa-map-marker-alt {
-  margin-right: 5px;
-}
-
 .login-menu {
   opacity: 0;
   position: absolute;
@@ -524,8 +518,51 @@ nav {
 }
 .login-menu input:focus {
   background: #fff;
+  border: none;
+}
+.login-menu .login-failed {
+  background: #fbd2ce;
+  border: 1px solid #ff9085;
+  animation-name: shake;
+  animation-duration: 0.4s;
+  animation-timing-function: ease-in-out;
 }
 
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
 #login-button {
   font-size: 1.3em;
   border: 1px solid #29b8ed;
@@ -821,7 +858,7 @@ main {
 }
 
 .table-wrapper {
-  width: 90%;
+  width: 95%;
   margin: 10px;
 }
 
@@ -834,15 +871,23 @@ table td, table th {
   padding: 5px;
   text-align: left;
   vertical-align: middle;
+  cursor: pointer;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 table tr {
   background-color: #f8f8f8;
-  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-table tr:hover {
+table td:hover {
   background-color: #ddd;
 }
 table th {
@@ -851,7 +896,9 @@ table th {
   text-align: left;
   background-color: #29b8ed;
   color: #fff;
-  cursor: default;
+}
+table th:hover {
+  background: #14afe9;
 }
 
 .filters {
@@ -913,14 +960,14 @@ table th {
   }
 }
 .card {
-  width: 90%;
+  width: 95%;
   border-radius: 20px;
   background: #eee;
   padding: 20px;
   display: none;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  margin: 10px;
   transition: opacity 0.4s ease;
   opacity: 0;
 }
@@ -992,6 +1039,32 @@ table th {
   color: #29b8ed;
   background: #fff;
   cursor: pointer;
+}
+
+.pagination-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.pagination {
+  display: flex;
+}
+.pagination a {
+  color: black;
+  font-size: 1.1em;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
+}
+
+.pagination--active {
+  background-color: #29b8ed;
+  color: white;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=styles.css.map */
