--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -37,7 +37,7 @@ main
     font-size: 2.2em
 
 .table-wrapper
-  width: 90%
+  width: 95%
   margin: 10px
 
 table
@@ -48,12 +48,20 @@ table
     padding: 5px
     text-align: left
     vertical-align: middle
+    cursor: pointer
+    width: 100%
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
   tr:nth-child(even)
     background-color: #f2f2f2
   tr
     background-color: #f8f8f8
-    cursor: pointer
-  tr:hover
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+  td:hover
     background-color: #ddd
   th
     padding-top: 12px
@@ -61,7 +69,8 @@ table
     text-align: left
     background-color: $main-color
     color: #fff
-    cursor: default
+    &:hover
+      background: darken($main-color,5%)
 
 .filters
   display: flex
@@ -111,14 +120,14 @@ table
     border-radius: 0
 
 .card
-  width: 90%
+  width: 95%
   border-radius: 20px
   background: #eee
   padding: 20px
   display: none
   flex-direction: column
   align-items: center
-  margin: 20px
+  margin: 10px
   transition: opacity 0.4s ease
   opacity: 0
   h3
@@ -179,3 +188,25 @@ table
     color: $main-color
     background: #fff
     cursor: pointer
+
+.pagination-wrapper
+  display: flex
+  justify-content: center
+  margin: 10px
+
+.pagination
+  display: flex
+  a
+    color: black
+    font-size: 1.1em
+    padding: 8px 16px
+    text-decoration: none
+    &:hover:not(.active)
+      background-color: #ddd
+      border-radius: 5px
+
+.pagination--active
+    background-color: $main-color
+    color: white
+    border-radius: 5px
+
