--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -4,107 +4,103 @@
 		<div class="substrate">
 			<h2>Stops</h2>
 			<div class="filters">
-				<div class="filtering-menu">
-					<label class="filtering-label">Number:</label>
-					<input type="checkbox" name="num01" id="num01" class="filter-by-type"/>
-					<label for="num01" class="filtering-item">45</label>
-					<input type="checkbox" name="num02" id="num02" class="filter-by-type"/>
-					<label for="num02" class="filtering-item">46</label>
-					<input type="checkbox" name="num03" id="num03" class="filter-by-type"/>
-					<label for="num03" class="filtering-item">47</label>
-					<input type="checkbox" name="num04" id="num04" class="filter-by-type"/>
-					<label for="num04" class="filtering-item">48</label>
-					<input type="checkbox" name="num05" id="num05" class="filter-by-type"/>
-					<label for="num05" class="filtering-item">49</label>
-					<input type="checkbox" name="num06" id="num06" class="filter-by-type"/>
-					<label for="num06" class="filtering-item">50</label>
-					<input type="checkbox" name="num07" id="num07" class="filter-by-type"/>
-					<label for="num07" class="last-filtering-label filtering-item">51</label>
-				</div>
+				{{> html/number_filtering_menu }}
 				{{> html/route_filtering_menu }}
 			</div>
 			<div class="table-wrapper">
 			<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
 				<table>
 					<tr onclick="showCard()">
-						<th>Number</th>
+						<th>Number<i class="material-icons">arrow_drop_up</i></th>
 						<th>Route</th>
 						<th>Name</th>
 					</tr>
 					<tr onclick="showCard()">
 						<td>45</td>
 						<td>01</td>
-						<td>Nevsky pr.</td>
+						<td>Nevsky pr. <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>02</td>
-						<td>Maly pr. VO</td>
+						<td>Maly pr. VO <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>03</td>
-						<td>Bolshoy pr. VO</td>
+						<td>Bolshoy pr. VO <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>48</td>
 						<td>04</td>
-						<td>Sampsonievsky pr.</td>
+						<td>Sampsonievsky pr. <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>49</td>
 						<td>05</td>
-						<td>Kupchino</td>
+						<td>Kupchino <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>50</td>
 						<td>06</td>
-						<td>Devyatkino</td>
+						<td>Devyatkino <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>51</td>
 						<td>07</td>
-						<td>Nahimova str.</td>
+						<td>Nahimova str. <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>45</td>
 						<td>01</td>
-						<td>Nevsky pr.</td>
+						<td>Nevsky pr. <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>02</td>
-						<td>Maly pr. VO</td>
+						<td>Maly pr. VO <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>03</td>
-						<td>Bolshoy pr. VO</td>
+						<td>Bolshoy pr. VO <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>48</td>
 						<td>04</td>
-						<td>Sampsonievsky pr.</td>
+						<td>Sampsonievsky pr. <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>49</td>
 						<td>05</td>
-						<td>Kupchino</td>
+						<td>Kupchino <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>50</td>
 						<td>06</td>
-						<td>Devyatkino</td>
+						<td>Devyatkino <i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>51</td>
 						<td>07</td>
-						<td>Nahimova str.</td>
+						<td>Nahimova str. <i class="material-icons">star_border</i></td>
 					</tr>
 				</table>
 			</div>
+				<div class="pagination-wrapper">
+					<div class="pagination">
+						<a href="#">&laquo;</a>
+						<a href="#" class="pagination--active">1</a>
+						<a href="#">2</a>
+						<a href="#">3</a>
+						<a href="#">4</a>
+						<a href="#">5</a>
+						<a href="#">6</a>
+						<a href="#">&raquo;</a>
+					</div>
+				</div>
 			<div class="card">
-				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
+				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Stop name</h3>
 				<div class="table-wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
