--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -24,78 +24,91 @@
 						<th>Type</th>
 						<th>Number</th>
 						<th>Route</th>
-						<th>Seats</th>
-					</tr>
+						<th>Seats <i class="material-icons">arrow_drop_up</i></th>
 					<tr>
 						<td><i class="material-icons">directions_bus</i></td>
-						<td>90</td>
+						<td>90 <i class="material-icons">star_border</i></td>
 						<td>01</td>
 						<td>48</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">directions_bus</i></td>
-						<td>90</td>
+						<td>90 <i class="material-icons">star_border</i></td>
 						<td>02</td>
 						<td>48</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td>190 <i class="material-icons">star_border</i></td>
 						<td>03</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td>190 <i class="material-icons">star_border</i></td>
 						<td>04</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td>190 <i class="material-icons">star_border</i></td>
 						<td>05</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td>190 <i class="material-icons">star_border</i></td>
 						<td>06</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td>190 <i class="material-icons">star_border</i></td>
 						<td>07</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td>300 <i class="material-icons">star_border</i></td>
 						<td>08</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td>300 <i class="material-icons">star_border</i></td>
 						<td>09</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td>300 <i class="material-icons">star_border</i></td>
 						<td>10</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td>300 <i class="material-icons">star_border</i></td>
 						<td>11</td>
 						<td>133</td>
 					</tr>
 				</table>
 			</div>
+			
+				<div class="pagination-wrapper">
+					<div class="pagination">
+						<a href="#">&laquo;</a>
+						<a href="#" class="pagination--active">1</a>
+						<a href="#">2</a>
+						<a href="#">3</a>
+						<a href="#">4</a>
+						<a href="#">5</a>
+						<a href="#">6</a>
+						<a href="#">&raquo;</a>
+					</div>
+				</div>
+				
 			<div class="card">
-				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
+				<div class="closing-button" onclick="onclick="closeCard(this)""><i class="material-icons close-pic">close</i></div>
 				<h3>Transport name</h3>
 				<div class="table-wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
