--- a/dev-server/app/templates/partials/html/header_menus.hbs
+++ b/dev-server/app/templates/partials/html/header_menus.hbs
@@ -6,14 +6,14 @@
 		<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 		<li><a href="#"><i class="material-icons">train</i>Train 102</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 		<li><a href="#"><i class="material-icons">tram</i>Tram 59</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="fa fa-map-marker"></i>Maly V.O.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="fa fa-map-marker"></i>Nevsky pr.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">place</i>Maly V.O.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">place</i>Nevsky pr.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 	</ul>
 </div>
 <div class="login-menu">
 	<div class="closing-button" onclick="closeLoginMenu()"><i class="material-icons close-pic">close</i></div>
 	<h3>Sign in</h3>
-	<input type="text" placeholder="Login">
-	<input type="password" placeholder="Password">
-	<a id="login-button" href="#">Sign in</a>
+	<input type="text" placeholder="Login" id="login-field" onfocus="loginValidationReset()">
+	<input type="password" placeholder="Password" id="password-field" onfocus="loginValidationReset()">
+	<a id="login-button" onclick="signIn()">Sign in</a>
 </div>
