--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -147,6 +147,13 @@ table
   margin: 5px
   z-index: 2
 
+.bookmark-button
+  position: absolute
+  top: -6px
+  right: 40px
+  margin: 5px
+  z-index: 2
+
 .edit-button
   position: absolute
   top: 0
