--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -10,91 +10,76 @@
 						<th>Route number</th>
 						<th>From</th>
 						<th>To</th>
-						<th><i class="material-icons">star</i></th>
 					</tr>
 					<tr onclick="showCard()">
 						<td>90</td>
 						<td>Maly pr. VO</td>
 						<td>Nevsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>90</td>
 						<td>Maly pr. VO</td>
 						<td>Nevsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>190</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>300</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
-						<td><i class="material-icons">star_border</i></td>
 					</tr>
 				</table>
 			</div>
@@ -111,6 +96,7 @@
 					</div>
 				</div>
 			<div class="card">
+				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Route name</h3>
 				<div class="table-wrapper">
