--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -18,72 +18,72 @@
 					<tr onclick="showCard()">
 						<td>45</td>
 						<td>01</td>
-						<td>Nevsky pr. <i class="material-icons">star_border</i></td>
+						<td>Nevsky pr.</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>02</td>
-						<td>Maly pr. VO <i class="material-icons">star_border</i></td>
+						<td>Maly pr. VO</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>03</td>
-						<td>Bolshoy pr. VO <i class="material-icons">star_border</i></td>
+						<td>Bolshoy pr. VO</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>48</td>
 						<td>04</td>
-						<td>Sampsonievsky pr. <i class="material-icons">star_border</i></td>
+						<td>Sampsonievsky pr.</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>49</td>
 						<td>05</td>
-						<td>Kupchino <i class="material-icons">star_border</i></td>
+						<td>Kupchino</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>50</td>
 						<td>06</td>
-						<td>Devyatkino <i class="material-icons">star_border</i></td>
+						<td>Devyatkino</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>51</td>
 						<td>07</td>
-						<td>Nahimova str. <i class="material-icons">star_border</i></td>
+						<td>Nahimova str.</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>45</td>
 						<td>01</td>
-						<td>Nevsky pr. <i class="material-icons">star_border</i></td>
+						<td>Nevsky pr.</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>02</td>
-						<td>Maly pr. VO <i class="material-icons">star_border</i></td>
+						<td>Maly pr. VO</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>46</td>
 						<td>03</td>
-						<td>Bolshoy pr. VO <i class="material-icons">star_border</i></td>
+						<td>Bolshoy pr. VO</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>48</td>
 						<td>04</td>
-						<td>Sampsonievsky pr. <i class="material-icons">star_border</i></td>
+						<td>Sampsonievsky pr.</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>49</td>
 						<td>05</td>
-						<td>Kupchino <i class="material-icons">star_border</i></td>
+						<td>Kupchino</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>50</td>
 						<td>06</td>
-						<td>Devyatkino <i class="material-icons">star_border</i></td>
+						<td>Devyatkino</td>
 					</tr>
 					<tr onclick="showCard()">
 						<td>51</td>
 						<td>07</td>
-						<td>Nahimova str. <i class="material-icons">star_border</i></td>
+						<td>Nahimova str.</td>
 					</tr>
 				</table>
 			</div>
@@ -100,6 +100,7 @@
 					</div>
 				</div>
 			<div class="card">
+				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Stop name</h3>
 				<div class="table-wrapper">
