--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -27,67 +27,67 @@
 						<th>Seats <i class="material-icons">arrow_drop_up</i></th>
 					<tr>
 						<td><i class="material-icons">directions_bus</i></td>
-						<td>90 <i class="material-icons">star_border</i></td>
+						<td>90</td>
 						<td>01</td>
 						<td>48</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">directions_bus</i></td>
-						<td>90 <i class="material-icons">star_border</i></td>
+						<td>90</td>
 						<td>02</td>
 						<td>48</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190 <i class="material-icons">star_border</i></td>
+						<td>190</td>
 						<td>03</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190 <i class="material-icons">star_border</i></td>
+						<td>190</td>
 						<td>04</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190 <i class="material-icons">star_border</i></td>
+						<td>190</td>
 						<td>05</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190 <i class="material-icons">star_border</i></td>
+						<td>190</td>
 						<td>06</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190 <i class="material-icons">star_border</i></td>
+						<td>190</td>
 						<td>07</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300 <i class="material-icons">star_border</i></td>
+						<td>300</td>
 						<td>08</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300 <i class="material-icons">star_border</i></td>
+						<td>300</td>
 						<td>09</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300 <i class="material-icons">star_border</i></td>
+						<td>300</td>
 						<td>10</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300 <i class="material-icons">star_border</i></td>
+						<td>300</td>
 						<td>11</td>
 						<td>133</td>
 					</tr>
@@ -108,7 +108,8 @@
 				</div>
 				
 			<div class="card">
-				<div class="closing-button" onclick="onclick="closeCard(this)""><i class="material-icons close-pic">close</i></div>
+				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
+				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Transport name</h3>
 				<div class="table-wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
