--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -20,7 +20,7 @@
 			<div class="header-buttons">
 				<div class="favorites">
 					<a href="#" onclick="toggleFavorites()">
-						<i class="far fa-bookmark"></i>
+						<i class="material-icons">star_border</i>
 					</a>
 				</div>
 				<div class="login" onclick="toggleLoginMenu()">
