--- a/dev-server/app/static-assets/sass/_multiselect.sass
+++ b/dev-server/app/static-assets/sass/_multiselect.sass
@@ -9,6 +9,7 @@
   border: 1px solid #ddd
   color: #000
   cursor: pointer
+  margin-bottom: 10px
   display: flex
   font-size: 16px
   font-weight: 500
